WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70280
Scroll animator tracing
https://bugs.webkit.org/show_bug.cgi?id=70280
Summary
Scroll animator tracing
Scott Byer
Reported
2011-10-17 16:02:08 PDT
Scroll animator tracing
Attachments
Patch
(3.14 KB, patch)
2011-10-17 16:03 PDT
,
Scott Byer
no flags
Details
Formatted Diff
Diff
Remove extra line
(3.15 KB, patch)
2011-10-18 13:15 PDT
,
Scott Byer
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Scott Byer
Comment 1
2011-10-17 16:03:05 PDT
Created
attachment 111339
[details]
Patch WebKit style question here; my inclination was to create TraceEvent.h at the platform level, renamed the one in the chromium dir to TraceEventChromium.h, and have TraceEvent.h either include TraceEventChromium.h or empty define the macro, so I could remove the platform conditionals from ScrollAnimatorNone.cpp. Good impulse, or is this more minimal patch better?
WebKit Review Bot
Comment 2
2011-10-17 16:05:05 PDT
Attachment 111339
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit', '--chromium']" exit_code: 2 Updating OpenSource Current branch master is up to date. Updating chromium port dependencies using gclient... Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Re-trying 'depot_tools/gclient sync' Error: Can't switch the checkout to
http://v8.googlecode.com/svn/branches/3.6@9637
; UUID don't match and there is local changes in /mnt/git/webkit-style-queue/Source/WebKit/chromium/v8. Delete the directory and try again. Error: 'depot_tools/gclient sync' failed 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 107. Re-trying 'depot_tools/gclient sync' No such file or directory at Tools/Scripts/update-webkit line 104. If any of these errors are false positives, please file a bug against check-webkit-style.
Nat Duca
Comment 3
2011-10-17 17:40:46 PDT
Comment on
attachment 111339
[details]
Patch <3 (though darn, we really need to figure out how to avoid all the platform-chromium goop.
James Robinson
Comment 4
2011-10-17 17:41:22 PDT
I wonder if other platforms are interested in this tracing stuff - I could imagine a dtrace backend or whatnot.
Scott Byer
Comment 5
2011-10-18 10:32:57 PDT
That's why I was thinking of lifting up the header - to both get rid of the PLATFORM goop in the implementation file and to leave the path open to implement the define for other platforms. But, should that be part of this CL or another? I can go either way. The tracing stuff really helps figure out what's going on in time critical sections of code, so I could see it becoming really useful if it were carefully added (that is, not too much noise).
James Robinson
Comment 6
2011-10-18 11:11:04 PDT
Comment on
attachment 111339
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=111339&action=review
This is fine as-is, imo. R=me with one nit
> Source/WebCore/platform/ScrollAnimatorNone.cpp:583 > + > +
nit: extra newline
Scott Byer
Comment 7
2011-10-18 13:15:09 PDT
Created
attachment 111491
[details]
Remove extra line
WebKit Review Bot
Comment 8
2011-10-18 16:04:17 PDT
Comment on
attachment 111491
[details]
Remove extra line Clearing flags on attachment: 111491 Committed
r97803
: <
http://trac.webkit.org/changeset/97803
>
WebKit Review Bot
Comment 9
2011-10-18 16:04:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug