Scroll animator tracing https://bugs.webkit.org/show_bug.cgi?id=70280

Patch by Scott Byer <scottbyer@chromium.org> on 2011-10-18
Reviewed by James Robinson.

No functional difference, no test needed.

* platform/ScrollAnimatorNone.cpp:
(WebCore::ScrollAnimatorNone::scroll):
(WebCore::ScrollAnimatorNone::animationTimerFired):

Canonical link: https://commits.webkit.org/86520@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97803 268f45cc-cd09-0410-ab3c-d52691b4dbfc